fixed horizontal scroll

--- a/style.css
+++ b/style.css
@@ -6,7 +6,8 @@
 .flower-body {
   max-width: 1200px;
   margin: 0 auto;
-  background-color: #F5F8FF;
+  background-color: #f5f8ff;
+  overflow-x: hidden;
 }
 .inter-regular {
   font-family: "Inter", sans-serif;
@@ -17,10 +18,10 @@
 .orange {
   color: #e95a08;
 }
-img{
-    max-width: 100%;
-    height: auto;
-    display: block;
+img {
+  max-width: 100%;
+  height: auto;
+  display: block;
 }
 /* navbar*/
 .navbar {
@@ -55,7 +56,7 @@ img{
   align-items: center;
   margin-bottom: 120px;
 }
-.banner-text{
+.banner-text {
   max-width: 50%;
 }
 .banner-text h1 {
@@ -230,81 +231,78 @@ img{
 }
 
 /* join section */
-.join-section{
-    position: relative;
-    width: 100vw; 
-    left: 50%;
-    transform: translateX(-50%);
-    overflow: hidden;
-    margin: 0;
-    padding: 0;
+.join-section {
+  position: relative;
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+  overflow: hidden;
 }
-.join-section img{
-   width: 100%;
-   height: auto;
-   display: block;
-   object-fit: cover;
-   min-height: 380px;
+.join-section img {
+  width: 100%;
+  height: auto;
+  display: block;
+  object-fit: cover;
+  min-height: 380px;
 }
-.join-content{
-    width: 60%;
-    position: absolute;
-    z-index: 10;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+.join-content {
+  width: 60%;
+  position: absolute;
+  z-index: 10;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
-.join-content h1{
-    font-size: 3.1rem;
-    color: white;
-    text-align: center;
-    margin-bottom: 25px;
+.join-content h1 {
+  font-size: 3.1rem;
+  color: white;
+  text-align: center;
+  margin-bottom: 25px;
 }
-.search-container{
-    display: flex;
-    justify-content: center;
+.search-container {
+  display: flex;
+  justify-content: center;
 }
-.search-container input{
-    flex: 1;
-    padding: 15px;
-    border: none;
+.search-container input {
+  flex: 1;
+  padding: 15px;
+  border: none;
 }
-.search-container button{
-    background-color: #E95A08;
-    color: white;
-    border: none;
-    padding: 15px 50px;
-    font-weight: 600;
-    cursor: pointer;
+.search-container button {
+  background-color: #e95a08;
+  color: white;
+  border: none;
+  padding: 15px 50px;
+  font-weight: 600;
+  cursor: pointer;
 }
 
 /* footer */
-.footer-section{
+.footer-section {
   display: grid;
   grid-template-columns: repeat(4, 1fr);
   column-gap: 100px;
   padding: 50px 0;
 }
-.footer-content p{
+.footer-content p {
   color: rgba(0, 0, 0, 0.5);
   padding: 10px 0;
 }
-.footer-content ul{
+.footer-content ul {
   list-style: none;
   display: flex;
   flex-direction: column;
   gap: 20px;
 }
-.footer-content ul a{
+.footer-content ul a {
   text-decoration: none;
   color: rgba(0, 0, 0, 0.5);
 }
-.footer-img{
+.footer-img {
   gap: 20px;
   display: flex;
   flex-direction: row;
 }
-.footer-img img{
+.footer-img img {
   height: 36px;
   width: 36px;
 }
@@ -328,7 +326,7 @@ img{
     gap: 28px;
     margin-bottom: 60px;
   }
-  .banner-text{
+  .banner-text {
     max-width: 100%;
   }
   .banner-text h1 {
@@ -341,10 +339,10 @@ img{
   .banner-image img {
     max-width: 100%;
   }
-  .hide{
+  .hide {
     display: none;
   }
-  .plants-section{
+  .plants-section {
     margin-bottom: 100px;
   }
   .plants-grid {
@@ -365,7 +363,7 @@ img{
     gap: 20px;
     margin-bottom: 100px;
   }
-  .plants-lover-content{
+  .plants-lover-content {
     max-width: 100%;
   }
   .plants-lover-content h2 {
@@ -405,30 +403,30 @@ img{
     font-size: 1rem;
     font-weight: 600;
   }
-  .join-section img{
-        display: block;
-        width: 100%;
-        object-fit: cover;
-        height: 250px;
-        min-height: 250px;
-    }
-    .join-content{
-      width: 90%;
-    }
-    .join-content h1{
-        font-size: 1.2rem;
-        margin-bottom: 15px;
-    }
-    .search-container{
-      width: 80%;
-      margin: 0 auto;
-    }
-    .search-container button{
-        padding: 12px 30px; 
-    }
-  .footer-section{
-        grid-template-columns: repeat(1,1fr);
-        padding: 30px 10px;
-        gap: 20px;
-    }
+  .join-section img {
+    display: block;
+    width: 100%;
+    object-fit: cover;
+    height: 250px;
+    min-height: 250px;
+  }
+  .join-content {
+    width: 90%;
+  }
+  .join-content h1 {
+    font-size: 1.2rem;
+    margin-bottom: 15px;
+  }
+  .search-container {
+    width: 80%;
+    margin: 0 auto;
+  }
+  .search-container button {
+    padding: 12px 30px;
+  }
+  .footer-section {
+    grid-template-columns: repeat(1, 1fr);
+    padding: 30px 10px;
+    gap: 20px;
+  }
 }
